Modified Requirements Doc to include template type and nameing conventions

--- a/Docs/RequirementAnalysis/LaTex/parts/projinfo.tex
+++ b/Docs/RequirementAnalysis/LaTex/parts/projinfo.tex
@@ -4,6 +4,9 @@
 \pdfbookmark[1]{Project Information}{Project Information}
 \chapter{Project Information}
 
+\section{Preface}
+This Requirements Analysis is done following the Volere template.
+
 % Background of the project
 \section{Background of the project}
 \hspace*{4mm}FollowThrough is to be a multi-platform system which can provide basketball players with real-time feedback on how to improve their shooting form. The hardware/software involved is to film the user while practicing, processing the information on the spot and returning usable advice which can change the player’s game for the better. The information is afterwards sent to the cloud where users may review their advice at home. It will also be designed to keep track of score for the user’s convenience.
@@ -26,7 +29,6 @@ Ideally the project will be able to function on any laptop camera or webcam.
     \item Ensuring the average user can setup and successfully use FollowThrough.
 \end{itemize}
 
-\newpage
 % Goal
 \section{Goal}
 \hspace*{4mm}The aim of FollowThrough is to eliminate the need for shot assistance while on the basketball court. FollowThrough will be software that works with any camera and laptop to provide real time advice and feedback to basketball players right on the court. FollowThrough will also save the analysis of the shot to the cloud for later review.
@@ -76,4 +78,14 @@ Ideally the project will be able to function on any laptop camera or webcam.
 \begin{itemize}
     \item Budget constraints can be seen below in the cost/benefit analysis
 \end{itemize}
+
+% Naming Conventions and Definitions
+\section{Naming Conventions and Definitions}
+\subsection{Definition of all Terms}
+\begin{itemize}
+    \item \textbf{FollowThrough:} The name of the product at hand.
+    \item \textbf{Arduino:} A simple micro-processing unit that can be programmed to complete various tasks.
+    \item \textbf{OpenCV:} An open source computer vision and machine learning software library.
+\end{itemize}
+
 
